# RecaLLM

./: .gitignore  LICENSE  README.md  pyproject.toml
recallm/: __init__.py  create_recallm_model.py  modelling_recallm.py  recallm_vllm.py
recallm/datasets/: README.md  create_dataset.py  create_datasets.py
recallm/datasets/aggregation/: majority_vote.py  threshold_filter.py  top_n_vote.py
recallm/datasets/citation_qa/: __init__.py  download_qampari.py  qampari.py
recallm/datasets/icl/: __init__.py  banking77.py  icl.py  massive.py
recallm/datasets/long_doc_qa/: quality.py
recallm/datasets/qa_kilt/: build_dense_embeddings.py  build_faiss_index.py  corpus.py  dense.py  hotpotqa.py  load_hotpotqa.py  multihop_base.py  musique.py  nq.py  prompt.py  single_hop.py  triviaqa.py  utils.py  wiki_multi_hop.py
recallm/datasets/reasoning_retrieval/: math_retrieval.py
recallm/datasets/recall/: multi_niah.py  retrieval.py
recallm/datasets/reranking/: __init__.py  msmarco_v2.py  prepare_data.py  (+1 more)
recallm/evaluation/: __init__.py  analysis.ipynb  evaluate_vllm.py  submit_all.sh
recallm/grpo/: convert_dataset.py  download_data.py  merge_checkpoint.py  reward_manager.py  reward_utils.py  rewards.py  run_grpo.sh
recallm/sft/: ds_config.json  sft_config.py  tokenize_sft_completions.py  train_sft.py  train_utils.py
recallm/system_prompts/: helpful_assistant.txt  minimal_reasoning.txt  minimal_reasoning_recall.txt  strategic_recall.txt
recallm/tasks/: README.md  __init__.py  base.py  create_dataset.py  create_datasets.py
trl/: CHANGES.md
verl/: CHANGES.md
(+129 files in other folders)
