[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "recallm"
version = "0.1.0"
description = "RecaLLM: Recall-augmented Language Models with constrained decoding for in-context retrieval."
requires-python = ">=3.10"
license = "Apache-2.0"

[tool.setuptools.packages.find]
include = ["recallm*"]
